--- a/web/index.html
+++ b/web/index.html
@@ -5,8 +5,9 @@
     <title>My super project!</title>
 </head>
 <body>
-    <h1>Super app!</h1>
-        <button onclick="location.href='/list'">List users</button>
-        <button onclick="location.href='/add'">Add user</button>
+<h1>Super app!</h1>
+<button onclick="location.href='/list'">List users</button>
+<button onclick="location.href='/add'">Add user</button>
+<button onclick="location.href='/delete'">Delete user</button>
 </body>
 </html>
